# PyHershey

./: .gitignore  README.md  pyproject.toml  setup.py
Hershey01/: Test001.py  TurtleShow.py  __init__.py
Hershey01/GsDict/: Library.py  cursive.gsdict  cyrilc_1.gsdict  cyrillic.gsdict  futural.gsdict  futuram.gsdict  gothgbt.gsdict  gothiceng.gsdict  gothicita.gsdict  gothitt.gsdict  greekc.gsdict  japanese.gsdict  mathupp.gsdict  music.gsdict  rowmand.gsdict  rowmans.gsdict  scripts.gsdict  timesg.gsdict  timesib.gsdict  timesr.gsdict  timesrb.gsdict
Hershey01/GsText/: Reader.py  Test.py  astrology.gstext  cursive.gstext  cyrilc_1.gstext  cyrillic.gstext  futural.gstext  futuram.gstext  gothgbt.gstext  gothgrt.gstext  gothiceng.gstext  gothicger.gstext  gothicita.gstext  gothitt.gstext  greek.gstext  greekc.gstext  greeks.gstext  japanese.gstext  markers.gstext  mathlow.gstext  mathupp.gstext  meteorology.gstext  music.gstext  rowmand.gstext  rowmans.gstext  rowmant.gstext  scriptc.gstext  scripts.gstext  symbolic.gstext  timesg.gstext  timesi.gstext  timesib.gstext  timesr.gstext  timesrb.gstext
Hershey01/VectorFont/: Font.py  FontData.py
Hershey9000/: DrawOne.py  Test001.py  TurtleShow.py  __init__.py  __main__.py
Hershey9000/GsDict/: Library.py  astrology.gsdict  gothgrt.gsdict  gothicger.gsdict  greek.gsdict  greeks.gsdict  japanese.gsdict  markers.gsdict  mathlow.gsdict  meteorology.gsdict  rowmant.gsdict  scriptc.gsdict  symbolic.gsdict  timesi.gsdict
Hershey9000/GsText/: Reader.py  Test.py  (+19 more)
PyHershey_9000.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+2 files in other folders)
