[project]
name = "PyHershey_9000"
version = "1.0.0"
authors = [
  { name="Randall Nagy", email="r.a.nagy@gmail.com" },
]
description = "Hershey's Vector Fonts"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soft9000/PyHershey"
"Bug Tracker" = "https://github.com/soft9000/PyHershey/issues"

[tool.setuptools]
